# fastapi-example

./: .env.template  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py  database.py  jwt.py  test_database.py
app/middlewares/: test_verify_token.py  verify_token.py
app/v1/authentication/: routes.py  validator.py
app/v1/books/: models.py  routes.py
app/v1/books/tests/: test_models.py  test_routes.py
